#3. Fixed buttons font and hero z-indexes.

--- a/src/styl/base.styl
+++ b/src/styl/base.styl
@@ -180,6 +180,7 @@ textarea
   cursor pointer
   background $blue
   border-radius 3px
+  font-family 'PierSans'
   outline none
   border none
   transition background 0.2s
