--- a/src/styl/sections/index.styl
+++ b/src/styl/sections/index.styl
@@ -61,6 +61,7 @@
   height 100%
 
 .homepage-hero__inner
+  z-index 1
   color white
   text-align center
   width 86%
